--- a/admin/report.html
+++ b/admin/report.html
@@ -40,15 +40,9 @@
 </head>
 
 <body>
-
+    <div class="wrapper">
         <!-- PAGE HEADER -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="logo">
-                    <img src="images/mgbcarlogo.png" alt="MGB Car Logo" width="200" height="200">
-                </div>
-            </div>
-        </div>
+        
         <!-- PAGE HEADER END-->
 
         <!-- BODY -->
@@ -60,6 +54,19 @@
 
                     <!-- PANEL HEADER -->
                     <div class="panel-heading"> 
+                        <div class="row">
+                        <div class="col-lg-12" align="center">
+                        <div class="logo">
+                            <img src="images/mgbcarlogo.png" alt="MGB Car Logo" width="100" height="100">
+                        </div>
+                    <div>
+                        <p>Mines and Geosciences Bureau</p>
+                        <p>Cordillera Administrative Region</p>
+                        <p>#80 Diego Silang St. Baguio City</p>
+                        <p>GEOSCIENCES DIVISION</p>
+                    </div>
+            </div>
+        </div>
                     </div>
                     <!-- PANEL HEADER END -->
 
@@ -87,6 +94,17 @@
 
                     <!-- PANEL FOOTER -->
                     <div class="panel-footer">
+                        <div class="row">
+                        <div class="col-lg-12" align="center">
+                            <div>
+                            <p>Prepared By.</p>
+                            <p>Raymark Cuenca</p>
+                            <p>Administrative Assistant I</p>
+                            <p>Document Controller</p>
+                            <p>Geosciences Division</p>
+                            </div>
+                        </div>
+                        </div>
                     </div>
                     <!-- PANEL FOOTER END -->
                 </div>
@@ -95,6 +113,11 @@
             </div>
         </div>
         <!-- BODY END -->
+
+        <!-- PAGE FOOTER -->
+        
+        <!-- PAGE FOOTER END-->
+    </div>
 
 
 
