--- a/admin/report.html
+++ b/admin/report.html
@@ -50,21 +50,27 @@
             <div class="col-lg-12">
 
                 <!-- PANEL -->
-                <div class="panel panel-green">
+                <div class="panel panel-default">
 
                     <!-- PANEL HEADER -->
                     <div class="panel-heading"> 
                         <div class="row">
                             <div class="col-lg-12" align="center">
-                                <div class="logo">
-                                    <img src="images/mgbcarlogo.png" alt="MGB Car Logo" width="100" height="100">
+                                <div style="margin-left: 500px">
+                                <div class="logo" style="float: left;">  
+                                    <img src="images/mgbcarlogo.png" alt="MGB Car Logo" width="80" height="80" style="margin-right: 10px">
                                 </div>
-                                <div>
-                                    <p>Mines and Geosciences Bureau</p>
-                                    <p>Cordillera Administrative Region</p>
-                                    <p>#80 Diego Silang St. Baguio City</p>
-                                    <p>GEOSCIENCES DIVISION</p>
-                                </div>
+
+                                <di class="all" style="float: left;">
+                                        <p>
+                                        Mines and Geosciences Bureau</br>
+                                        Cordillera Administrative Region</br>
+                                        #80 Diego Silang St. Baguio City</br>
+                                        GEOSCIENCES DIVISION
+                                    </p>
+                                </div> 
+                                </div>                      
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -95,13 +101,10 @@
                     <!-- PANEL FOOTER -->
                     <div class="panel-footer">
                         <div class="row">
-                            <div class="col-lg-12" align="center">
+                            <div class="col-lg-12" align="left" style="margin-left: 5px">
                                 <div>
-                                    <p>Prepared By.</p>
-                                    <p>Raymark Cuenca</p>
-                                    <p>Administrative Assistant I</p>
-                                    <p>Document Controller</p>
-                                    <p>Geosciences Division</p>
+                                    <p>Prepared By. Raymark Cuenca</br>
+                                    Administrative Assistant I / Document Controller</p>
                                 </div>
                             </div>
                         </div>
