--- a/admin/report.html
+++ b/admin/report.html
@@ -41,36 +41,33 @@
 
 <body>
     <div class="wrapper">
-        <!-- PAGE HEADER -->
-        
-        <!-- PAGE HEADER END-->
 
         <!-- BODY -->
         <div class="row">
             <div class="col-lg-12">
 
-                <!-- PANEL -->
-                <div class="panel panel-default">
+            <!-- PANEL -->
+            <div class="panel panel-default">
 
                     <!-- PANEL HEADER -->
                     <div class="panel-heading"> 
                         <div class="row">
-                            <div class="col-lg-12" align="center">
-                                <div style="margin-left: 500px">
-                                <div class="logo" style="float: left;">  
-                                    <img src="images/mgbcarlogo.png" alt="MGB Car Logo" width="80" height="80" style="margin-right: 10px">
-                                </div>
+                            <div class="col-lg-12" align="center" style="margin-left: 450px">
+                                <div>
+                                    <div class="logo" style="float: left;">  
+                                        <img src="images/mgbcarlogo.png" alt="MGB Car Logo" width="100" height="100" style="margin-right: 10px">
+                                    </div>
 
-                                <di class="all" style="float: left;">
+                                    <div class="all" style="float: left; font-family:times new roman;">
                                         <p>
-                                        Mines and Geosciences Bureau</br>
+                                        Republic of the Philippines</br>
+                                        Department of Environment and Natural Resources</br>
+                                        MINES AND GEOSCIENCES BUREAU</br>
                                         Cordillera Administrative Region</br>
                                         #80 Diego Silang St. Baguio City</br>
-                                        GEOSCIENCES DIVISION
-                                    </p>
-                                </div> 
+                                        </p>
+                                    </div> 
                                 </div>                      
-                            </div>
                             </div>
                         </div>
                     </div>
@@ -115,11 +112,6 @@
 
             </div>
         </div>
-        <!-- BODY END -->
-
-        <!-- PAGE FOOTER -->
-        
-        <!-- PAGE FOOTER END-->
     </div>
 
 
